# texfiles

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  OMakefile  README.md  deploy.sh  deploy_key.enc  forlua.tex  test.fdb_latexmk  test.tex  word-lua.dtx  word-lua.ins  word.cls  word.dtx  word.ins
